--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.1",
+    "emoji-picker-react": "^4.7.12",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
