--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
