Improved CSS and JSX elements along with inclusion of CSS modules.

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.1",
     "emoji-picker-react": "^4.7.12",
     "jwt-decode": "^4.0.0",
