--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.1",
     "emoji-picker-react": "^4.7.12",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
@@ -25,6 +27,7 @@
     "redux": "^5.0.1",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
